# ndr

./: .gitignore  .gitmodules  CITATION  CITATION.cff  README.md  environment.yml  fem.py  filtering.py  fourfeat_utils.py  multires_utils.py  networks.py  run.md  utils.py  visualizations.py
VoxelFEM/: .gitignore  .gitmodules  CMakeLists.txt  LagrangePolynomial.hh  MultigridSolver.hh  NDVector.hh  OptimalityCriterion.hh  TPPeriodicHomogenization.hh  TensorProductBasisPolynomial.hh  TensorProductPolynomialInterpolant.hh  TensorProductQuadrature.hh  TensorProductSimulator.hh  TopologyOptimizationConstraint.hh  TopologyOptimizationFilter.hh  TopologyOptimizationObjective.hh  TopologyOptimizationProblem.hh  knitro_optimization.hh
VoxelFEM/examples/bcs/: cantilever_traction_E.bc
VoxelFEM/matlab/: FEMMatrix_eigenvalues.m  addFixedDOFs.m  anotherRowsColsSwap.m  applyLoads.m  define_and_solve_system.m  fixVariables.m  fix_DOFs_and_compute_eigenvalues.m  full_stiffness_matrix_from_upper_sparse.m  pairwiseRowsColsSwap.m
VoxelFEM/python/: Demo_TensorProductSimulator.ipynb  Demo_TopologyOptimizationProblem.ipynb  Filters.ipynb  MGBenchmark.ipynb  Numerical_Derivatives.ipynb  Parameters_Testing.ipynb
VoxelFEM/python/helpers/: ipopt_helpers.py  mangled_names.py
VoxelFEM/python/tests/: Filters.ipynb  Numerical_Derivatives.ipynb
VoxelFEM/python_bindings/: CMakeLists.txt  VoxelFEM.cc
VoxelFEM/tests/: CMakeLists.txt  Topology_Optimization.cc  homogenizedElasticityTensor.cc  test_TensorProductSimulator.cc  test_TopologyOptimizationProblem.cc  test_tp_gauss_quadrature.cc  tp_quadrature_1var_test.inl  tp_quadrature_2var_test.inl  tp_quadrature_3var_test.inl
bcs/2d/: bridge.bc  mbb_beam.bc  roof.bc  short_beam.bc
bcs/3d/: bridge.bc
eval/: eval_fourfeat.py  eval_voxelfem.py
problems/2d/: bridge.json  mbb_beam.json  roof.json
problems/3d/: bridge.json  cantilever_flexion.json
slurm_jobs/: ff_b_s1.sh  ff_b_s2.5.sh  ff_c_s4.0.sh  vfm_b.sh  vfm_c.sh
training/: cl_utils.py  train_voxelfem.py  train_xdg.py
